tcg-salesforce/force-app/main/default/objects/MatchUpdate__e/MatchUpdate__e.object-meta.xml
<CustomObject>
    <label>Match Update</label>
    <pluralLabel>Macthes Udapte</pluralLabel>
</CustomObject>