tcg-salesforce/force-app/main/default/objects/MatchUpdate__e/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>