tcg-salesforce/force-app/main/default/objects/MatchUpdate__e/fields/MatchId__c.field-meta.xml
<CustomField>
    <fullName>MatchId__c</fullName>
    <label>MatchId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>