tcg-salesforce/force-app/main/default/objects/MatchUpdate__e/fields/PlayerLoginCode__c.field-meta.xml
<CustomField>
    <fullName>PlayerLoginCode__c</fullName>
    <label>Player Login Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>